--- a/LoginRegestration/src/main/resources/templates/index.html
+++ b/LoginRegestration/src/main/resources/templates/index.html
@@ -25,6 +25,8 @@ License: You must have a valid license purchased only from themeforest(the above
 <meta name="keywords"
 	content="materialize, admin template, dashboard template, flat admin template, responsive admin template, eCommerce dashboard, analytic dashboard">
 <meta name="author" content="ThemeSelect">
+<meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
+
 <title>User Login | Materialize - Material Design Admin Template</title>
 <link rel="apple-touch-icon"
 	href="/app-assets/images/favicon/apple-touch-icon-152x152.png">
